# chipLPC

./: Cargo.toml  LICENSE.txt  README.md  THIRDPARTY.yml  build_vst3.bat
chipLPC UI/: License.txt
chipLPC UI/Knob/source files/: Knob-Body.step  Knob.FCStd
src/: lib.rs  lpc.rs  plugin.rs
